<resources>
    <string name="app_name">Fake Store</string>
    <!--titles-->
    <string name="principal_title">Fake Store</string>

    <!--btns-->
    <string name="login_with_google">Sign in with Google</string>
    <string name="login_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_up">Sign In / Up</string>
    <string name="login_btn">Log in</string>
    <string name="register_btn">Register now</string>
    <string name="login_message">Sign In</string>
    <string name="register_message">Sign Up</string>
    <string name="reset_password">Forgot password</string>
    <string name="home_btn">Home</string>
    <string name="favorite_btn">Favorite</string>
    <string name="profile_btn">Profile</string>
    <string name="confirm">Accept</string>
    <string name="cancel">Cancel</string>

    <!--messages-->
    <string name="have_an_account">Alrady have an account?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="header_message_login">Log in to your account</string>
    <string name="header_message_register">Register your account</string>
    <string name="alert_message_exit">Want you exit of application?</string>
    <string name="email_form_required">Email is required</string>
    <string name="email_form_incorrect">Email address is not correct</string>
    <string name="password_form_required">Want you exit of application?</string>
    <string name="term_and_conditions">I accept the terms and conditions</string>
    <string name="header_error_register_message">The user could not be registered please check the data entered.</string>
    <string name="header_error_login_message">Password or Email incorrect</string>
    <string name="alert_error_login_alert">Incorrect Credentials</string>
    <string name="alert_error_register_alert">Ups!!Something went wrong</string>


    <!--Pleaceholders-->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="icon_error">icon error</string>

</resources>